# autonomy-research-testbed

./: .atk.yml  .avtoolbox.yml  .env  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  Hardware.md  LICENSE.txt  MANIFEST.in  README.md  atk.env  atk.hcl  atk.yml  docker-compose.yml  pygpsclient.desktop  pyproject.toml  requirements.txt  setup.py  super_client_configuration_file.xml
sim/cpp/: CMakeLists.txt  demo_ROS_convoy.cpp  demo_ROS_dART.cpp  demo_ROS_dART_lot17.cpp  demo_ROS_dART_tracking.cpp  demo_ROS_rpm.cpp  demo_ROS_sensor.cpp  demo_ROS_slip.cpp  test.py  view_rpm.py  view_slip.py  wheel_rpm_vs_throttle.csv
workspace/src/common/launch/art_launch/: CMakeLists.txt  package.xml
workspace/src/common/launch/art_launch/config/: params.yaml
workspace/src/common/launch/art_launch/launch/: arduino_driver.launch.py  art.launch.py  art_launch.py  art_real.launch.py  art_reality.launch.py  art_rosbag_reality.launch.py  art_sim.launch.py  art_simulation.launch.py  art_stack.launch.py  cone_detection.launch.py  path_planning.launch.py  usb_cam.launch.py
workspace/src/common/launch/art_localization_launch/: CMakeLists.txt  package.xml
workspace/src/common/launch/art_localization_launch/config/: 4DOF_dynamics.yml  EKF_param.yml  ekf_config.yaml
workspace/src/common/launch/art_localization_launch/launch/: art_localization.launch.py  chrono_imu_filter.launch.py  ekf_estimation.launch.py  ekf_launch.launch.py  ground_truth.launch.py  localization.launch.py  particle_filter_estimation.launch.py  pf_estimation.launch.py
workspace/src/common/launch/art_sensing_launch/: CMakeLists.txt  package.xml
workspace/src/common/launch/art_sensing_launch/config/: arrowwood.yaml  art_sensing.config.yml  chokecherry.yaml  nannyberry.yaml  ports.yaml  sim.yaml  usb_cam.params.yaml
workspace/src/common/launch/art_sensing_launch/launch/: gps.launch.py  (+6 more)
workspace/src/common/launch/miniav_control_launch/: CMakeLists.txt  package.xml
workspace/src/common/meta/art_common_meta/: CMakeLists.txt  README.md  package.xml
workspace/src/common/meta/art_dev_meta/: CMakeLists.txt  README.md  package.xml
workspace/src/common/meta/art_oak_meta/: CMakeLists.txt  README.md  package.xml
workspace/src/common/utils/dynamics/: package.xml  setup.cfg  setup.py
workspace/src/control/: CMakeLists.txt  package.xml  plotting_trajectory.py  setup.py
workspace/src/control/PID_controller/: package.xml  setup.cfg  setup.py
workspace/src/control/PID_controller/PID_controller/: PID_controller.py
workspace/src/control/PID_controller/data/: throttle_threshold.csv
workspace/src/control/control/: control.py  keras_ml.keras  keras_ml_learmMPC_080323.keras  keras_ml_learnMC_0la_0803.keras  keras_ml_learnMC_0la_0804.keras  keras_ml_learnMC_1la_0808.keras  keras_ml_learnMC_1la_0810.keras  keras_ml_learnMC_1la_0828.keras  keras_ml_learnMPC_1la_0808.keras  keras_ml_learnMPC_1la_0815.keras  keras_ml_learnMPC_1la_0828.keras  mpc_cvxpy_v2.py  mpc_osqp_v2.py  mpc_osqp_v3.py  mpc_wpts.py  path_planning.py  r1.txt  r1_10hz.txt  r2.txt  r2_10hz.txt  test.py
workspace/src/control/convoy_controller/: package.xml  setup.cfg  setup.py
workspace/src/control/convoy_controller/convoy_controller/: control_mux.py  data_playback.py  data_recorder.py  follower.py  leader.py  mpc.py  vehicle_trajectory.py  velocity.py
workspace/src/control/data/: figure_8_v0.csv  throttle_threshold.csv
workspace/src/control/include/control/: control.h
workspace/src/control/neural_network_controller/: package.xml  setup.cfg  setup.py
workspace/src/control/neural_network_controller/neural_network_controller/: neural_network_controller.py
workspace/src/control/path_planning/: package.xml  setup.py
workspace/src/control/path_planning/path_planning/: path_planning.py
workspace/src/control/pid_controller/: package.xml
workspace/src/control/pid_controller/data/: smallest_radius_left.csv
workspace/src/control/pid_controller/pid_controller/: pid_controller.py
workspace/src/control/pid_lateral_controller/: package.xml  setup.cfg  setup.py
workspace/src/control/pid_lateral_controller/data/: smallest_radius_right.csv
workspace/src/control/pid_lateral_controller/pid_lateral_controller/: pid_lateral_controller.py  pid_lateral_follower.py
workspace/src/control/pure_pursuit_follower/: package.xml  setup.cfg  setup.py
workspace/src/control/pure_pursuit_follower/pure_pursuit_follower/: pure_pursuit_follower.py
workspace/src/control/rl_waypoints_controller/: package.xml  setup.cfg  setup.py
workspace/src/control/rl_waypoints_controller/rl_waypoints_controller/: rl_waypoints_controller.py
workspace/src/control/src/: control.cpp
workspace/src/localization/ekf_estimation/: package.xml  setup.cfg  setup.py
workspace/src/localization/ekf_estimation/ekf_estimation/: EKF.py  ekf_estimation.py  ned2enu.py
workspace/src/path_planning/waypoints_path_planner/: package.xml  setup.cfg  setup.py
workspace/src/path_planning/waypoints_path_planner/resource/: package.xml
workspace/src/path_planning/waypoints_path_planner/waypoints_path_planner/: lot17.csv  path.csv  waypoints_path_planner.py
workspace/src/path_planning_waypoints/: package.xml  setup.cfg  setup.py
workspace/src/path_planning_waypoints/path_planning_waypoints/: __init__.py  path_planning_waypoints.py
workspace/src/perception/cone_detector/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
workspace/src/perception/cone_detector/cone_detector/: collect.py  compare.py  loader.py  metrics.py  object_recognition.py  recognition_network.py  test.py  test_inference.py  train.py  yolov5_detector.py
workspace/src/perception/cone_detector/data/: calibration.json
workspace/src/perception/cone_detector/src/: cone_detecter_node.cpp  cone_detector.cpp
workspace/src/perception/yolov7/: CMakeLists.txt  package.xml
workspace/src/perception/yolov7/src/: yolov7.cpp  yolov7_node.cpp
workspace/src/sensing/ros2_wheeltec_n100_imu/: CMakeLists.txt  README.md  package.xml
workspace/src/sensing/ros2_wheeltec_n100_imu/src/: crc_table.cpp  imu_node.cpp
(+626 files in other folders)
