<?xml version="1.0"?>
<package format="3">
  <name>art_localization_launch</name>
  <version>0.1.0</version>
  <description>The art_localization_launch package</description>

  <maintainer email="TODO@TODO.com">TODO</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <exec_depend>robot_localization</exec_depend>
  <exec_depend>imu_tools</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
