<?xml version="1.0"?>
<package format="3">
  <name>art_sensing_launch</name>
  <version>0.1.0</version>
  <description>The art_sensing_launch package</description>

  <maintainer email="TODO@TODO.com">TODO</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>usb_cam</exec_depend>
  <exec_depend>bluespace_ai_xsens_mti_driver</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
