<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>art_common_meta</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="art@todo.todo">art</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>rqt_graph</exec_depend>
  
  <exec_depend>art_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
