<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>art_common_meta</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="art@todo.todo">art</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>rqt_graph</exec_depend>
  
  <exec_depend>art_msgs</exec_depend>

  <exec_depend>art_launch</exec_depend>
  <exec_depend>waypoints_path_planner</exec_depend>
  <exec_depend>pid_lateral_controller</exec_depend>
  <exec_depend>centerline_objects_path_planner</exec_depend>
  <exec_depend>spline_path_planner</exec_depend>
  <exec_depend>pure_pursuit_follower</exec_depend>
  <exec_depend>convoy_controller</exec_depend>
  <exec_depend>navsat_util</exec_depend>
  <exec_depend>ekf_estimation</exec_depend>
  <exec_depend>description</exec_depend>
  <exec_depend>ground_truth</exec_depend>
  <exec_depend>chrono_ros_interfaces</exec_depend>
  <exec_depend>localization_py</exec_depend>
  <exec_depend>cone_detector</exec_depend>
  <exec_depend>chrono_sensor_filters</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
