<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>art_oak_meta</name>
  <version>1.0.0</version>
  <description>A package to aggregate all packages for the ART-Oak vehicle.</description>
  <maintainer email="todo@todo.todo">TODO</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>art_common_meta</exec_depend>

  <exec_depend>art_oak_launch</exec_depend>
  <exec_depend>cone_detector</exec_depend>
  <exec_depend>ground_truth</exec_depend>
  <exec_depend>centerline_objects_path_planner</exec_depend>
  <exec_depend>pid_lateral_controller</exec_depend>
  <exec_depend>chrono_ros_interfaces</exec_depend>
  <!-- add sensing -->
</package>
