<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>art_oak_meta</name>
  <version>1.0.0</version>
  <description>A package to aggregate all packages for the ART-Oak vehicle.</description>
  <maintainer email="todo@todo.todo">TODO</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>art_common_meta</exec_depend>

  <exec_depend>art_oak_launch</exec_depend>
  <exec_depend>lidar_scan_2d</exec_depend>
  <exec_depend>ekf_localization</exec_depend>
  <exec_depend>waypoints_path_planner</exec_depend>
  <exec_depend>neural_network_controller</exec_depend>
  <exec_depend>chrono_ros_interfaces</exec_depend>
  <exec_depend>arduino_driver</exec_depend>
  <exec_depend>sllidar_ros2</exec_depend>
  <exec_depend>wheeltec_n100_imu</exec_depend>
  <exec_depend>nmea_navsat_driver</exec_depend>
  <exec_depend>serial</exec_depend>
  <!-- add sensing -->
</package>
