<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>art_oak_meta</name>
  <version>1.0.0</version>
  <description>A package to aggregate all packages for the ART-Oak vehicle.</description>
  <maintainer email="todo@todo.todo">TODO</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>art_common_meta</exec_depend>

  <exec_depend>art_vehicle_launch</exec_depend>

  <!-- Drivers -->
  <exec_depend>wheeltec_n100_imu</exec_depend>
  <exec_depend>nmea_navsat_driver</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>arduino_driver</exec_depend>  
</package>
